<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">MicrosoftProject</string>
    <string name="action_settings">Settings</string>

    <string name="ble_not_supported">BLE is not supported</string>
    <string name="title_devices">BLE Device Scan</string>
    <string name="title_activity_device_scan">DeviceScanActivity</string>
	<string name="error_bluetooth_not_supported">Bluetooth not supported.</string>
    
	<string name="unknown_device">Unknown device</string>
	<string name="unknown_characteristic">Unknown characteristic</string>
	<string name="unknown_service">Unknown service</string>
	
    <!--  Menu items -->
    <string name="menu_refresh">Refresh</string>
    <string name="menu_connect">Connect</string>
    <string name="menu_disconnect">Disconnect</string>
    <string name="menu_scan">Scan</string>
    <string name="menu_stop">Stop</string>
    
</resources>
