<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.microsoftproject.MainActivity" >

    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/action_settings"/>

    <item android:id="@+id/menu_refresh"
        android:checkable="false"
        android:title="@string/menu_refresh"
        android:orderInCategory="1"
        android:showAsAction="ifRoom"/>
    <item android:id="@+id/menu_scan"
          android:title="@string/menu_scan"
          android:orderInCategory="100"
          android:showAsAction="ifRoom|withText"/>
    <item android:id="@+id/menu_stop"
          android:title="@string/menu_stop"
          android:orderInCategory="101"
          android:showAsAction="ifRoom|withText"/>
    <item android:id="@+id/menu_connect"
          android:title="@string/menu_connect"
          android:orderInCategory="100"
          android:showAsAction="ifRoom|withText"/>
    <item android:id="@+id/menu_disconnect"
          android:title="@string/menu_disconnect"
          android:orderInCategory="101"
          android:showAsAction="ifRoom|withText"/>
</menu>
